--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "vue-upload-multiple-image": "^1.1.6",
     "vue2-timeago": "^2.0.0",
     "vuelidate": "^0.7.6",
-    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -36,10 +35,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
-    "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-template-compiler": "^2.6.11"
   }
 }
