--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,4 @@
 VUE_APP_API_URL=http://localhost:8000/api/v1/
 VUE_APP_BASE_URL=http://localhost:8000/
+VUE_APP_I18N_LOCALE=en
+VUE_APP_I18N_FALLBACK_LOCALE=en
