--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
@@ -16,14 +17,16 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-barcode": "^1.3.0",
+    "vue-i18n": "^8.22.3",
+    "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^3.2.0",
     "vue-upload-multiple-image": "^1.1.6",
     "vue2-timeago": "^2.0.0",
     "vuelidate": "^0.7.6",
-    "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@intlify/vue-i18n-loader": "^1.0.0",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
@@ -36,10 +39,8 @@
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
     "prettier": "^2.2.1",
-    "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
-    "vue-cli-plugin-vuetify": "~2.4.1",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "vue-cli-plugin-i18n": "~2.1.2",
+    "vue-template-compiler": "^2.6.11"
   }
 }
