--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@johmun/vue-tags-input": "^2.1.0",
+    "@trevoreyre/autocomplete-vue": "^2.2.0",
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "chartjs": "^0.3.24",
